--- a/src/scss/blocks/card-post.scss
+++ b/src/scss/blocks/card-post.scss
@@ -66,7 +66,7 @@
 
 .card-post__nav-meta span {
   font-size: 26px;
-  font-family: "Roboto", sans-serif;
+	font-family: 'L890-Roman-Bold';
   color: rgb(255, 255, 255);
   font-weight: bold;
   padding: 5px 10px;
@@ -273,7 +273,7 @@
   height: 95px;
   font-size: 30px;
   font-weight: 700;
-  font-family: "Roboto", sans-serif;
+	font-family: 'L890-Roman-Bold';
   color: rgb(255, 255, 255);
   line-height: 1.455;
   text-align: center;
@@ -338,7 +338,7 @@
 
 .full-page__title h2 {
   font-size: 28px;
-  font-family: "Open Sans", sans-serif;
+	font-family: 'L890-Roman-Bold';
   color: rgb(255, 255, 255);
   font-weight: bold;
   text-decoration: none;
