--- a/src/scss/mixin/about-project.scss
+++ b/src/scss/mixin/about-project.scss
@@ -6,7 +6,7 @@
   display: inline-block;
   margin-bottom: 30px;
   font-size: 44px;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "L890-Roman-Bold";
   color: rgb(255, 255, 255);
   font-weight: bold;
   line-height: 1.2;
@@ -20,7 +20,8 @@
 .about-project p {
   margin: 0;
   font-size: 28px;
-  font-family: 'Open Sans', sans-serif;
+  font-weight: 400;
+  font-family: "L890-Roman-Regular";
   color: rgb(255, 255, 255);
   line-height: 1.5;
 
