--- a/src/scss/mixin/detals.scss
+++ b/src/scss/mixin/detals.scss
@@ -2,7 +2,7 @@
   display: inline-block;
   margin-bottom: 30px;
   font-size: 44px;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "L890-Roman-Bold";
   color: rgb(255, 255, 255);
   font-weight: bold;
   line-height: 1.2;
@@ -31,7 +31,8 @@
 .detals-description-item p {
   margin: 0;
   font-size: 28px;
-  font-family: 'Open Sans', sans-serif;
+  font-weight: 400;
+  font-family: "L890-Roman-Regular";
   color: rgb(255, 255, 255);
   line-height: 1.5;
   text-align: left;
@@ -52,7 +53,8 @@
 .detals-description-item a {
   display: inline-block;
   font-size: 28px;
-  font-family: 'Open Sans', sans-serif;
+  font-weight: 400;
+  font-family: "L890-Roman-Regular";
   color: #fd6dfd;
   text-decoration: underline;
   line-height: 1.5;
