--- a/src/scss/blocks/contact-answer.scss
+++ b/src/scss/blocks/contact-answer.scss
@@ -12,7 +12,7 @@
 
 .contact-answer h2 {
   font-size: 32px;
-  font-family: "Open Sans", sans-serif;
+	font-family: 'L890-Roman-Bold';
   color: rgb(0, 0, 0);
   font-weight: bold;
   margin-bottom: 25px;
