--- a/src/scss/blocks/footer.scss
+++ b/src/scss/blocks/footer.scss
@@ -1,7 +1,7 @@
 .footer {
   position: relative;
   padding: 30px 15px 40px;
-  background-color: rgba(51, 51, 51, .5);
+  background-color: rgba(51, 51, 51, 0.5);
   overflow-x: hidden;
 
   &::before {
@@ -36,7 +36,8 @@
 .footer__title {
   margin-bottom: 20px;
   font-size: 28px;
-  font-family: "Roboto", sans-serif;
+  font-weight: 700;
+  font-family: "L890-Roman-Bold";
   color: rgb(255, 255, 255);
   line-height: 1.2;
   text-align: center;
@@ -49,7 +50,8 @@
 
 .footer__subtitle {
   font-size: 26px;
-  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  font-family: "L890-Roman-Regular";
   color: #ffffff;
   line-height: 1.2;
   text-align: center;
@@ -106,7 +108,8 @@
 .footer-inner__title {
   margin-bottom: 40px;
   font-size: 34px;
-  font-family: "Roboto", sans-serif;
+  font-weight: 700;
+  font-family: "L890-Roman-Bold";
   color: rgb(255, 255, 255);
   font-weight: bold;
 }
@@ -116,7 +119,7 @@
   margin-bottom: 40px;
   font-size: 30px;
   font-weight: 300;
-  font-family: "Roboto", sans-serif;
+  font-family: "L850-Slab-Light";
   color: rgb(255, 255, 255);
 
   a {
