--- a/src/scss/blocks/timeline.scss
+++ b/src/scss/blocks/timeline.scss
@@ -41,7 +41,7 @@
   position: relative;
   display: inline-block;
   font-size: 72px;
-  font-family: 'Neoneon';
+  font-family: "Neoneon";
   color: rgb(255, 255, 255);
   font-weight: bold;
   z-index: 5;
@@ -214,7 +214,7 @@
 .timeline__column-title {
   display: inline;
   font-size: 36px;
-  font-family: "Open Sans", sans-serif;
+  font-family: "L890-Roman-Bold";
   color: rgb(0, 0, 0);
   font-weight: bold;
   border-bottom: 4px solid rgb(251, 220, 77);
@@ -226,7 +226,8 @@
 
 .timeline__column-subtitle {
   font-size: 26px;
-  font-family: "Open Sans", sans-serif;
+  font-weight: 400;
+  font-family: "L890-Roman-Regular";
   color: rgb(0, 0, 0);
   line-height: 1.2;
 
@@ -237,9 +238,9 @@
 
 .timeline__column-desc {
   font-size: 26px;
-  font-family: "Open Sans", sans-serif;
+  font-weight: 700;
+  font-family: "L890-Roman-Bold";
   color: rgb(0, 0, 0);
-  font-weight: bold;
 
   @media (min-width: 1170px) {
     font-size: 20px;
