--- a/src/scss/mixin/link-project.scss
+++ b/src/scss/mixin/link-project.scss
@@ -6,9 +6,9 @@
   display: inline-block;
   margin-bottom: 30px;
   font-size: 44px;
-  font-family: 'Open Sans', sans-serif;
+  font-weight: 700;
+  font-family: "L890-Roman-Bold";
   color: rgb(255, 255, 255);
-  font-weight: bold;
   line-height: 1.2;
   border-bottom: 8px solid #fd6dfd;
 
@@ -46,7 +46,8 @@
 
 .link-project-item a {
   font-size: 28px;
-  font-family: 'Open Sans', sans-serif;
+  font-weight: 400;
+  font-family: "L890-Roman-Regular";
   color: #fd6dfd;
   text-decoration: underline;
   line-height: 1.2;
