--- a/src/scss/utils/_utils.scss
+++ b/src/scss/utils/_utils.scss
@@ -5,3 +5,27 @@
 	font-weight: normal;
 	font-style: normal;
 }
+
+@font-face {
+	font-family: 'L890-Roman-Regular';
+	src: url('../libs/fonts/l890/L890-Roman-Regular.eot');
+	src: local('☺'), url('../libs/fonts/l890/L890-Roman-Regular.woff') format('woff'), url('../libs/fonts/l890/L890-Roman-Regular.ttf') format('truetype'), url('../libs/fonts/l890/L890-Roman-Regular.svg') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'L890-Roman-Bold';
+	src: url('../libs/fonts/l890/L890-Roman-Bold.eot');
+	src: local('☺'), url('../libs/fonts/l890/L890-Roman-Bold.woff') format('woff'), url('../libs/fonts/l890/L890-Roman-Bold.ttf') format('truetype'), url('../libs/fonts/l890/L890-Roman-Bold.svg') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'L850-Slab-Light';
+	src: url('../libs/fonts/l890/L850-Slab-Light.eot');
+	src: local('☺'), url('../libs/fonts/l890/L850-Slab-Light.woff') format('woff'), url('../libs/fonts/l890/L850-Slab-Light.ttf') format('truetype'), url('../libs/fonts/l890/L850-Slab-Light.svg') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
