--- a/src/scss/vars/_variables.scss
+++ b/src/scss/vars/_variables.scss
@@ -1,20 +1,8 @@
-// Fonts
-$baseFont: "Open Sans", sans-serif;
-$accentFont: "Merriweather", serif;
-$codeFont: Consolas, Monaco, Lucida Console, monospace;
-
-// Colors
 $white: #fff;
 $blue: #037ec6;
 $grayText: #666666;
 $lightGrayText: #c4c4c4;
 $lightGrayBg: #f5f5f5;
 $grayBg: #808080;
-
-// Components
-$linkColor: $blue;
-
-// random
-// :root {
-//     --random-color: #fff;
-// }
+$redcolor: #e74c3c;
+$yellowcolor: #fbdc4d;
