loptop dev done

--- a/src/pug/sections/header.pug
+++ b/src/pug/sections/header.pug
@@ -14,24 +14,25 @@ section.header
 				.header__avatar_css
 					h4.avatar__title CSS
 					.avatar-css__img
+						img(src="./img/header/css.png", alt="css.png")
 				.header__avatar_html
 					h4.avatar__title HTML
 					.avatar-html__img
+						img(src="./img/header/html.png", alt="html.png")
 				.header__avatar_js
 					h4.avatar__title JS
 					.avatar-js__img
+						img(src="./img/header/js.png", alt="js.png")
 				img(src="./img/header/master.webp", alt="master")
 	.big-container
 		.header__bg-img.wow.animated.fadeInUp
-			.header__carousel
-				.header-owl-carousel.owl-carousel
-					.owl-carousel-item
-						img(src="./img/header/cert/html.webp", alt="cert-html")
-					.owl-carousel-item
-						img(src="./img/header/cert/html-pro.webp", alt="cert-html-pro")
-					.owl-carousel-item
-						img(src="./img/header/cert/js.webp", alt="cert-js")
-			span
+			.header__carousel.owl-carousel.owl-theme
+				.owl-carousel-item
+					img(src="./img/header/cert/html.webp", alt="cert-html")
+				.owl-carousel-item
+					img(src="./img/header/cert/html-pro.webp", alt="cert-html-pro")
+				.owl-carousel-item
+					img(src="./img/header/cert/js.webp", alt="cert-js")
 	.container
 		.header__bg-wrap
 			.header__bg-item.wow.animated.fadeInUp
