--- a/src/pug/sections/navigation.pug
+++ b/src/pug/sections/navigation.pug
@@ -21,3 +21,5 @@ section.navigation#navigation
                     i(class="fa fa-telegram fa-2x" aria-hidden="true")
                 a(href="https://github.com/AleksandrVorobyov" target="_blank" class="social-github")
                     i(class="fa fa-github fa-2x" aria-hidden="true")
+            button.navigation__burger#nav-burger-btn(type="button")
+                span
