--- a/src/scss/blocks/card-post.scss
+++ b/src/scss/blocks/card-post.scss
@@ -104,7 +104,8 @@
   position: relative;
   padding: 10px;
   height: 750px;
-  width: 700px;
+  max-width: 700px;
+  width: 100%;
   background-color: #fd6dfd;
   box-shadow: 19px 19px 100px 0px rgb(196, 219, 233);
   margin: auto;
@@ -117,18 +118,13 @@
   @media (min-width: 1170px) {
     margin: 0;
     height: 806px;
-    width: 648px;
+    max-width: 648px;
   }
 }
 
 .carousel-project {
-  max-width: 700px;
-  height: 750px;
-
-  @media (min-width: 1170px) {
-    max-width: 648px;
-    height: 806px;
-  }
+  width: 100%;
+  height: 100%;
 }
 
 .carousel-project.owl-carousel .owl-carousel-item {
