--- a/src/scss/blocks/navigation.scss
+++ b/src/scss/blocks/navigation.scss
@@ -1,7 +1,7 @@
 .navigation {
   position: relative;
   padding-top: 75px;
-  z-index: 4;
+  z-index: 500;
 
   @media (min-width: 1170px) {
     background-color: transparent;
@@ -37,10 +37,19 @@
 
 .navigation-wrap {
   display: flex;
-  flex-direction: column;
-  justify-content: center;
+  justify-content: space-around;
+  align-items: center;
   padding: 15px 0;
   z-index: 10;
+
+  @media (max-width: 768px) {
+    padding-bottom: 50px;
+  }
+
+  @media (min-width: 768px) {
+    flex-direction: column;
+    justify-content: center;
+  }
 
   @media (min-width: 1170px) {
     padding: 0;
@@ -65,7 +74,6 @@
   color: #fff;
   text-decoration: none;
   transition: 0.8s ease-in-out;
-  margin-bottom: 50px;
   text-shadow: 0 0 5px #fd6dfd, 0 0 10px #fd6dfd, 0 0 20px #fd6dfd,
     0 0 40px #fd6dfd, 0 0 80px #fd6dfd;
   z-index: 10;
@@ -85,6 +93,10 @@
     z-index: -1;
   }
 
+  @media (min-width: 768px) {
+    margin-bottom: 50px;
+  }
+
   @media (min-width: 1170px) {
     font-weight: 700;
     font-family: "Neoneon";
@@ -101,7 +113,7 @@
 }
 
 .nav {
-  display: inline-block;
+  display: none;
   position: relative;
   font-size: 20px;
   font-family: "Neoneon";
@@ -146,6 +158,10 @@
     }
   }
 
+  @media (min-width: 768px) {
+    display: inline-block;
+  }
+
   @media (min-width: 1170px) {
     margin-bottom: 0;
   }
@@ -184,11 +200,15 @@
 .navigation__social {
   margin-bottom: 50px;
   position: relative;
-  display: flex;
+  display: none;
   align-items: center;
   justify-content: center;
   transition: 0.5s ease-in-out;
   z-index: 5;
+
+  @media (min-width: 768px) {
+    display: flex;
+  }
 
   @media (min-width: 1170px) {
     border-bottom: 5px solid #fd6dfd;
@@ -225,5 +245,66 @@
     &:hover {
       color: #73ebeb;
     }
+  }
+}
+
+.navigation__burger {
+  position: relative;
+  display: block;
+  width: 50px;
+  height: 40px;
+  border: none;
+  background: transparent;
+  cursor: pointer;
+
+  &::before {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 4px;
+    width: 100%;
+    content: "";
+    background: rgb(253, 109, 253);
+    border-radius: 3px;
+  }
+
+  &::after {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    height: 4px;
+    width: 100%;
+    content: "";
+    background: rgb(253, 109, 253);
+    border-radius: 3px;
+  }
+
+  span::before {
+    position: absolute;
+    top: 50%;
+    left: 0;
+    height: 4px;
+    width: 100%;
+    content: "";
+    transform: translateY(-50%);
+    background: rgb(253, 109, 253);
+    border-radius: 3px;
+  }
+
+  @media (min-width: 768px) {
+    display: none;
+  }
+}
+
+.navigation .night-sun {
+  display: none;
+  top: 100px;
+
+  @media (min-width: 768px) {
+    display: flex;
+  }
+
+  @media (min-width: 1170px) {
+    top: 150px;
   }
 }
