--- a/src/scss/blocks/portfolio.scss
+++ b/src/scss/blocks/portfolio.scss
@@ -38,7 +38,8 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: linear-gradient(#dfdbdb48, #fa9d9d70), url('../img/portfolio/bg.webp') top center/ cover no-repeat;
+  background: linear-gradient(#dfdbdb48, #fa9d9d70),
+    url("../img/portfolio/bg.webp") top center/ cover no-repeat;
   background-attachment: fixed;
   background-blend-mode: hue;
   z-index: -1;
@@ -53,11 +54,15 @@
   position: relative;
   display: inline-block;
   margin-bottom: 70px;
-  font-size: 72px;
-  font-family: 'Neoneon';
+  font-size: 50px;
+  font-family: "Neoneon";
   color: rgb(255, 255, 255);
   font-weight: bold;
   z-index: 5;
+
+  @media (min-width: 600px) {
+    font-size: 72px;
+  }
 
   &::after {
     position: absolute;
@@ -123,16 +128,17 @@
 
 .color-item {
   display: inline-block;
-  width: 80px;
-  height: 80px;
+  width: 50px;
+  height: 50px;
   background-color: rgb(211, 195, 195);
   border-radius: 50%;
-  margin-right: 20px;
+  margin: 20px;
   cursor: pointer;
   box-shadow: 0px 0px 3px 3px #e2e0dc;
 
-  &:last-child {
-    margin-right: 0;
+  @media (min-width: 600px) {
+    width: 80px;
+    height: 80px;
   }
 
   @media (min-width: 1170px) {
@@ -174,4 +180,3 @@
     white 10px
   );
 }
-
