--- a/src/scss/mixin/link-project.scss
+++ b/src/scss/mixin/link-project.scss
@@ -5,12 +5,16 @@
 .link-project-title {
   display: inline-block;
   margin-bottom: 30px;
-  font-size: 44px;
+  font-size: 32px;
   font-weight: 700;
   font-family: "L890-Roman-Bold";
   color: rgb(255, 255, 255);
   line-height: 1.2;
   border-bottom: 8px solid #fd6dfd;
+
+  @media (min-width: 600px) {
+    font-size: 44px;
+  }
 
   @media (min-width: 1170px) {
     font-size: 26px;
@@ -30,7 +34,7 @@
   i {
     color: #fd6dfd;
     margin-right: 15px;
-    transition: all .4s linear;
+    transition: all 0.4s linear;
   }
 
   &:hover a {
@@ -38,20 +42,23 @@
   }
 
   &:hover i {
-  transition: .5s ease-in-out;
-  color: #ea736d;
+    transition: 0.5s ease-in-out;
+    color: #ea736d;
   }
-
 }
 
 .link-project-item a {
-  font-size: 28px;
+  font-size: 24px;
   font-weight: 400;
   font-family: "L890-Roman-Regular";
   color: #fd6dfd;
   text-decoration: underline;
   line-height: 1.2;
-  transition: .3s ease-in-out;
+  transition: 0.3s ease-in-out;
+
+  @media (min-width: 600px) {
+    font-size: 28px;
+  }
 
   @media (min-width: 1170px) {
     font-size: 18px;
