burger + sidebar + mobilefirst

--- a/src/pug/layouts/page-layout.pug
+++ b/src/pug/layouts/page-layout.pug
@@ -42,6 +42,7 @@ html(lang="ru")
         script(src="./js/contact.js")
         script(src="./libs/tweenmax/tweenmax.js")
         script(src="./js/full-page.js")
+        script(src="./js/sidebar.js")
         script(src="./js/btnup.js")
         script(src="./js/rain.js")
         <script>jQuery(document).ready(function($) {new WOW().init();});</script>
