--- a/src/pug/pages/amazing.pug
+++ b/src/pug/pages/amazing.pug
@@ -10,6 +10,7 @@ block variables
 block content
 	header
 		include ../sections/navigation.pug
+		include ../sections/sidebar.pug
 	main
 		include ../portfolio/amazing.pug
 	footer
