--- a/src/pug/pages/contact.pug
+++ b/src/pug/pages/contact.pug
@@ -9,6 +9,7 @@ block variables
 block content
 	header
 		include ../sections/navigation.pug
+		include ../sections/sidebar.pug
 	main
 		include ../sections/contact.pug
 	footer
