--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -11,10 +11,10 @@ block content
 	header
 		include ../sections/navigation.pug
 		include ../sections/header.pug
+		include ../sections/sidebar.pug
 	main
 		include ../sections/portfolio.pug
 		include ../sections/timeline.pug
 		include ../sections/contact.pug
-		//- include ../sections/contact-answer.pug
 	footer
 		include ../sections/footer.pug
