--- a/src/pug/sections/header.pug
+++ b/src/pug/sections/header.pug
@@ -33,6 +33,11 @@ section.header
 					img(src="./img/header/cert/html-pro.webp", alt="cert-html-pro")
 				.owl-carousel-item
 					img(src="./img/header/cert/js.webp", alt="cert-js")
+			.header__carousel-row-btn
+				button.header__carousel-btn.header__carousel-btn-prev(type='button' id='header-carousel-prev')
+					span
+				button.header__carousel-btn.header__carousel-btn-next(type='button' id='header-carousel-next')
+					span
 	.container
 		.header__bg-wrap
 			.header__bg-item.wow.animated.fadeInUp
