--- a/src/pug/sections/navigation.pug
+++ b/src/pug/sections/navigation.pug
@@ -1,6 +1,6 @@
 section.navigation#navigation
     .big-container
-        div(id="nightSun" class="night-sun" data-title="Включить белую тему")
+        div(id="nightSun" class="night-sun" data-night data-title="Включить белую тему")
             i(class="fa fa-3x fa-moon-o" aria-hidden="true")
         .navigation-wrap
             h1.navigation__logo.wow.animated.slideInDown
