--- a/src/pug/pages/card-post.pug
+++ b/src/pug/pages/card-post.pug
@@ -10,6 +10,7 @@ block variables
 block content
 	header
 		include ../sections/navigation.pug
+		include ../sections/sidebar.pug
 	main
 		include ../sections/card-post.pug
 	footer
