--- a/src/scss/blocks/header.scss
+++ b/src/scss/blocks/header.scss
@@ -50,10 +50,12 @@
 
 .header__text {
   margin: auto;
+  margin-top: 30px;
   text-align: center;
   max-width: 585px;
 
   @media (min-width: 1170px) {
+    margin-top: 0;
     text-align: left;
   }
 }
@@ -63,7 +65,7 @@
   display: inline-block;
   margin-bottom: 20px;
   padding-bottom: 5px;
-  font-size: 70px;
+  font-size: 50px;
   font-family: "Neoneon";
   font-weight: 400;
   color: #fff;
@@ -84,6 +86,10 @@
     transition: 0.5s ease-in-out;
     animation: nameLogo 6s ease-in-out 0s infinite;
     border-radius: 10px 0;
+  }
+
+  @media (min-width: 480px) {
+    font-size: 70px;
   }
 
   @media (min-width: 600px) {
@@ -193,7 +199,7 @@
   }
 
   &:hover {
-    transform: translate(-100%, -15px);
+    transform: translateY(-15px);
 
     .avatar__title {
       color: #fd6dfd;
@@ -319,7 +325,6 @@
   display: block;
   width: 100%;
   height: 100%;
-  max-height: 800px;
   padding: 50px;
   z-index: 40;
   overflow: hidden;
@@ -366,11 +371,15 @@
 
 .header__bg-title {
   margin-bottom: 50px;
-  font-size: 50px;
+  font-size: 40px;
   font-family: "Neoneon";
   color: #fff;
   font-weight: 700;
   text-shadow: 0px 3px 42.32px rgba(255, 255, 255, 0.004);
+
+  @media (min-width: 480px) {
+    font-size: 50px;
+  }
 
   @media (min-width: 600px) {
     font-size: 54px;
@@ -428,21 +437,25 @@
       margin-right: 0;
     }
   }
+}
 
-  .fa-2x {
-    font-size: 4em;
-    text-shadow: 0 0 5px #fd6dfd, 0 0 10px #fd6dfd, 0 0 20px #fd6dfd,
-      0 0 40px #fd6dfd, 0 0 80px #fd6dfd, 0 0 90px #fd6dfd, 0 0 100px #fd6dfd,
-      0 0 150px #fd6dfd;
-    transition: 0.5s ease-in-out;
+.header__bg-social .fa-2x {
+  font-size: 48px;
+  text-shadow: 0 0 5px #fd6dfd, 0 0 10px #fd6dfd, 0 0 20px #fd6dfd,
+    0 0 40px #fd6dfd, 0 0 80px #fd6dfd, 0 0 90px #fd6dfd, 0 0 100px #fd6dfd,
+    0 0 150px #fd6dfd;
+  transition: 0.5s ease-in-out;
 
-    @media (min-width: 1170px) {
-      font-size: 2em;
-    }
+  @media (min-width: 600px) {
+    font-size: 64px;
+  }
 
-    &:hover {
-      color: #73ebeb;
-    }
+  @media (min-width: 1170px) {
+    font-size: 32px;
+  }
+
+  &:hover {
+    color: #73ebeb;
   }
 }
 
@@ -471,4 +484,77 @@
   @media (min-width: 1170px) {
     font-size: 24px;
   }
+}
+
+.header__carousel-row-btn {
+  position: absolute;
+  top: 50%;
+  left: 0;
+  width: 100%;
+  height: auto;
+  transform: translateY(-50%);
+  display: flex;
+  justify-content: space-between;
+  padding: 0 10px;
+  z-index: 80;
+}
+
+.header__carousel-btn {
+  position: relative;
+  width: 30px;
+  height: 80px;
+  cursor: pointer;
+  border: none;
+  border-radius: 6px;
+  outline: none;
+  background: rgba(0, 0, 0, 1);
+  opacity: .6;
+  transition: opacity .3s ease-in 0s, box-shadow .3s ease-in .3s;
+
+  &::before {
+    position: absolute;
+    top: 15px;
+    left: 50%;
+    transform: translateX(-50%);
+    content: '';
+    width: 4px;
+    height: 30px;
+    background: #ffffff;
+  }
+
+  &::after {
+    position: absolute;
+    bottom: 15px;
+    left: 50%;
+    transform: translateX(-50%);
+    content: '';
+    width: 4px;
+    height: 30px;
+    background: #ffffff;
+  }
+}
+
+.header__carousel-btn-next {
+  &::before {
+    transform: translateX(-50%) rotate(-45deg);
+  }
+
+  &::after {
+    transform: translateX(-50%) rotate(45deg);
+  }
+}
+
+.header__carousel-btn-prev {
+  &::before {
+    transform: translateX(-50%) rotate(45deg);
+  }
+
+  &::after {
+    transform: translateX(-50%) rotate(-45deg);
+  }
+}
+
+.header__carousel-btn:hover {
+  opacity: 1;
+  box-shadow: 0px 0px 10px #fd6dfd, 0px 0px 20px #fd6dfd, 0px 0px 30px #fd6dfd;
 }
