--- a/src/scss/blocks/navigation.scss
+++ b/src/scss/blocks/navigation.scss
@@ -1,7 +1,12 @@
 .navigation {
   position: relative;
-  padding-top: 75px;
+  padding-top: 50px;
+  height: 200px;
   z-index: 500;
+
+  @media (min-width: 768px) {
+    padding-top: 75px;
+  }
 
   @media (min-width: 1170px) {
     background-color: transparent;
