--- a/src/scss/blocks/timeline.scss
+++ b/src/scss/blocks/timeline.scss
@@ -40,7 +40,7 @@
   margin-bottom: 150px;
   position: relative;
   display: inline-block;
-  font-size: 50px;
+  font-size: 40px;
   font-family: "Neoneon";
   color: rgb(255, 255, 255);
   font-weight: bold;
@@ -57,6 +57,10 @@
     left: -3px;
     z-index: -1;
     transition: 0.5s ease-in-out;
+  }
+
+  @media (min-width: 480px) {
+    font-size: 50px;
   }
 
   @media (min-width: 600px) {
