--- a/src/scss/blocks/ui.scss
+++ b/src/scss/blocks/ui.scss
@@ -6,7 +6,7 @@
   background-color: #fd6dfd80;
   border-radius: 40px;
   border: 4px solid #fd6dfd;
-  font-size: 34px;
+  font-size: 24px;
   font-family: "Neoneon";
   color: #73ebeb;
   font-weight: bold;
@@ -73,6 +73,10 @@
     transition-delay: 0s, 0.5s, 1s, 1s;
   }
 
+  @media (min-width: 600px) {
+    font-size: 34px;
+  }
+
   @media (min-width: 1170px) {
     font-size: 22px;
   }
@@ -93,6 +97,7 @@
   transition: 0.3s linear, border 0.5s ease-in-out, transform 1.2s linear;
   background-color: rgba(0, 0, 0, 0.5);
   z-index: 30;
+  overflow: hidden;
 
   &:hover {
     transform: scale(1.1);
@@ -116,12 +121,20 @@
 
 .card__img-wrap {
   position: relative;
-  height: 360px;
+  height: 250px;
   width: 100%;
   perspective: 800px;
   z-index: 30;
-  background-color: rgba(0, 0, 0, 0.7);
+  background: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('../img/card/bg/card-bg.jpg') center center /cover no-repeat;
   border-radius: 14px 14px 0 0;
+
+  @media (min-width: 440px) {
+    height: 300px;
+  }
+
+  @media (min-width: 600px) {
+    height: 360px;
+  }
 
   @media (min-width: 1020px) {
     height: 280px;
@@ -163,6 +176,7 @@
   transition: transform 1.2s linear;
   transform-style: preserve-3d;
   transform-origin: left center;
+  z-index: 50;
 }
 
 .card:hover .card__btn {
@@ -185,9 +199,9 @@
 
 .card__btn {
   position: absolute;
-  top: 140px;
+  top: 50%;
   left: 50%;
-  transform: translateX(-50%);
+  transform: translate(-50%, -50%);
   font-size: 34px;
   line-height: 34px;
   letter-spacing: 2px;
@@ -202,17 +216,17 @@
   transition-delay: 0.6s;
   box-shadow: 0 0 10px #6decfd, 0 0 20px #6decfd, 0 0 40px #6decfd,
     0 0 60px #6decfd;
-
-  @media (min-width: 1020px) {
-    top: 80px;
-  }
 }
 
 .card__title {
-  font-size: 30px;
+  font-size: 26px;
   font-family: "L890-Roman-Bold";
   color: rgb(0, 0, 0);
   font-weight: bold;
+
+  @media (min-width: 600px) {
+    font-size: 30px;
+  }
 
   @media (min-width: 1170px) {
     font-size: 26px;
@@ -220,10 +234,14 @@
 }
 
 .card__subtitle {
-  font-size: 26px;
+  font-size: 18px;
   font-weight: 400;
   font-family: "L890-Roman-Regular";
   color: rgb(0, 0, 0);
+
+  @media (min-width: 600px) {
+    font-size: 30px;
+  }
 
   @media (min-width: 1170px) {
     font-size: 20px;
