--- a/src/pug/sections/sidebar.pug
+++ b/src/pug/sections/sidebar.pug
@@ -6,13 +6,13 @@ aside.sidebar#sidebar
         .sidebar__links
             ul.sidebar__links-col
                 li.sidebar__links-item 
-                    a(href="#").sidebar__links-item-link
+                    a(href="index.html").sidebar__links-item-link
                         span Главная
                 li.sidebar__links-item 
-                    a(href="#").sidebar__links-item-link
+                    a(href="portfolio.html").sidebar__links-item-link
                         span Работы
                 li.sidebar__links-item 
-                    a(href="#").sidebar__links-item-link
+                    a(href="contact.html").sidebar__links-item-link
                         span Контакты
         .sidebar__social
             a(href="https://vk.com/id65683827" target="_blank" class="social-vk")
