--- a/src/scss/blocks/card-post.scss
+++ b/src/scss/blocks/card-post.scss
@@ -13,7 +13,7 @@
     background: linear-gradient(
       0deg,
       rgba(255, 255, 255, 0) 30%,
-      rgba(253, 109, 253, 1) 100%
+      $redCyber 100%
     );
   }
 
@@ -27,7 +27,7 @@
     background: linear-gradient(
       180deg,
       rgba(255, 255, 255, 0) 30%,
-      rgba(253, 109, 253, 1) 100%
+      $redCyber 100%
     );
   }
 }
@@ -45,7 +45,7 @@
   position: relative;
   display: inline-block;
   margin-bottom: 40px;
-  font-size: 48px;
+  font-size: 36px;
   font-family: "Neoneon";
   color: #fff;
   font-weight: bold;
@@ -55,31 +55,46 @@
   &::after {
     position: absolute;
     content: "";
-    background-color: #fd6dfd;
+    background-color: $redCyber;
     height: 12px;
     width: 100%;
-    bottom: 5px;
+    bottom: -8px;
     left: 0;
     z-index: -2;
   }
+
+  @media (min-width: 600px) {
+    font-size: 48px;
+
+    &::after {
+      bottom: 5px;
+    }
+  }
+}
+
+.card-post__nav-meta {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 .card-post__nav-meta span {
-  font-size: 26px;
-	font-family: 'L890-Roman-Bold';
+  font-size: 16px;
+  font-family: "L890-Roman-Bold";
   color: rgb(255, 255, 255);
   font-weight: bold;
   padding: 5px 10px;
-  margin-right: 20px;
+  margin: 10px;
 
-  &:last-child {
-    margin-right: 0;
+  @media (min-width: 600px) {
+    font-size: 26px;
   }
 
   @media (min-width: 1170px) {
-    font-size: 14px;
+    font-size: 20px;
   }
 }
+
 .card-post__content {
   position: relative;
   display: flex;
@@ -90,6 +105,7 @@
     flex-direction: row;
   }
 }
+
 .card-post__content-desc {
   max-width: 560px;
   margin: auto;
@@ -99,6 +115,7 @@
     max-width: 460px;
   }
 }
+
 .card-post__content-carousel {
   display: block;
   position: relative;
@@ -106,7 +123,7 @@
   height: 750px;
   max-width: 700px;
   width: 100%;
-  background-color: #fd6dfd;
+  background-color: $redCyber;
   box-shadow: 19px 19px 100px 0px rgb(196, 219, 233);
   margin: auto;
   margin-bottom: 50px;
@@ -212,82 +229,73 @@
 
 .card-post__pagination {
   display: flex;
-  margin-top: 40px;
+  margin: 40px 0 80px;
+  z-index: 50;
 
-  form:first-child {
-    margin-right: 30px;
-  }
-}
-
-.card-post__pagination form {
-  position: relative;
-  width: 100%;
-  transition: all 0.5s linear;
-
-  &::before {
-    position: absolute;
-    content: "";
-    display: block;
-    top: 0;
-    left: 50%;
-    width: 0%;
-    height: 100%;
-    background-color: #73ebeb;
-    z-index: 5;
-    transition: all 0.5s linear;
-  }
-
-  &::after {
-    position: absolute;
-    content: "";
-    display: block;
-    top: 0;
-    right: 50%;
-    width: 0%;
-    height: 100%;
-    background-color: #73ebeb;
-    z-index: 3;
-    transition: all 0.5s linear;
-  }
-
-  &:hover {
-    box-shadow: 0px 28px 100px 10px #73ebeb;
-  }
-
-  &:hover::before {
-    width: 50%;
-  }
-
-  &:hover::after {
-    width: 50%;
+  .pagination + .pagination {
+    margin-left: 30px;
   }
 }
 
 .pagination {
   position: relative;
   width: 100%;
-  height: 95px;
-  font-size: 30px;
-  font-weight: 700;
-	font-family: 'L890-Roman-Bold';
-  color: rgb(255, 255, 255);
-  line-height: 1.455;
+  height: 60px;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  color: #fff;
+  background: rgba(0, 0, 0, 0.4);
+  text-decoration: none;
+  text-transform: uppercase;
+  line-height: 60px;
   text-align: center;
-  background-color: rgba(51, 51, 51, 0.418);
+  letter-spacing: 2px;
+  transition: all 0.5s ease-in-out .6s, box-shadow .4s ease-out .6s;
+  z-index: 50;
+  overflow: hidden;
   cursor: pointer;
-  outline: none;
-  transition: all 0.5s ease-in;
-  border-radius: 0px;
-  border: 3px dashed #fd6dfd;
-  z-index: 5;
+  -webkit-box-reflect: below 10px linear-gradient(transparent, #0002);
+}
 
-  &:hover::before {
-    width: 100%;
-  }
+.pagination:hover {
+  background: #ec0b36 url("../img/btn/pixel.png");
+  transition-delay: 0.8s;
+  animation: pixelBtn 0.8s steps(8) forwards;
+  background-size: 180px;
+  box-shadow: 0px 0px 10px #ec0b36, 0px 0px 20px #ec0b36, 0px 0px 40px #ec0b36;
+}
 
-  @media (min-width: 1170px) {
-    font-size: 22px;
-  }
+.pagination::before {
+  position: absolute;
+  top: 0;
+  left: 0;
+  content: "";
+  width: 20px;
+  height: 20px;
+  border-top: 2px solid #00ffff;
+  border-left: 2px solid #00ffff;
+  transition: all 0.4s linear 0.2s;
+}
+
+.pagination::after {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  content: "";
+  width: 20px;
+  height: 20px;
+  border-bottom: 2px solid aqua;
+  border-right: 2px solid aqua;
+  transition: all 0.4s linear 0.2s;
+}
+
+.pagination:hover::before {
+  width: 100%;
+  height: 100%;
+}
+
+.pagination:hover::after {
+  width: 100%;
+  height: 100%;
 }
 
 .full-page {
@@ -320,7 +328,7 @@
   height: 100%;
   overflow-y: scroll;
   padding: 10px;
-  background-color: #fd6dfd;
+  background-color: $redCyber;
 }
 
 .full-page__desc {
@@ -329,18 +337,18 @@
   justify-content: space-around;
   align-items: center;
   background-color: rgb(187, 187, 187);
-  border-bottom: 10px solid #fd6dfd;
+  border-bottom: 10px solid $redCyber;
 }
 
 .full-page__title h2 {
   font-size: 28px;
-	font-family: 'L890-Roman-Bold';
+  font-family: "L890-Roman-Bold";
   color: rgb(255, 255, 255);
   font-weight: bold;
   text-decoration: none;
 
   span {
-    color: #fd6dfd;
+    color: $redCyber;
   }
 }
 
@@ -376,7 +384,7 @@
 }
 
 .full-page__img + .full-page__img {
-  border-top: 10px solid #fd6dfd;
+  border-top: 10px solid $redCyber;
 }
 
 .carousel-project.owl-carousel .owl-carousel-item {
