--- a/src/scss/blocks/contacts.scss
+++ b/src/scss/blocks/contacts.scss
@@ -54,7 +54,7 @@
     position: absolute;
     content: "";
     clear: both;
-    background-color: #fd6dfd;
+    background-color: $redCyber;
     width: 100%;
     height: 10px;
     bottom: -7px;
@@ -171,7 +171,7 @@
   top: 0;
   transform: translateX(-50%);
   margin-top: -1.3em;
-  background: #fd6dfd;
+  background: $redCyber;
   height: 2em;
   width: 2em;
   line-height: 2em;
@@ -275,7 +275,7 @@
   padding: 30px;
   max-width: 550px;
   background-color: rgb(255, 255, 255);
-  box-shadow: 0px 28px 100px 0px #fd6dfd;
+  box-shadow: 0px 28px 100px 0px $redCyber;
   border-radius: 10px;
   margin-left: auto;
   margin-right: auto;
