--- a/src/scss/blocks/footer.scss
+++ b/src/scss/blocks/footer.scss
@@ -35,12 +35,16 @@
 
 .footer__title {
   margin-bottom: 20px;
-  font-size: 28px;
+  font-size: 24px;
   font-weight: 700;
   font-family: "L890-Roman-Bold";
   color: rgb(255, 255, 255);
   line-height: 1.2;
   text-align: center;
+
+  @media (min-width: 600px) {
+    font-size: 28px;
+  }
 
   @media (min-width: 1170px) {
     text-align: left;
@@ -49,12 +53,16 @@
 }
 
 .footer__subtitle {
-  font-size: 26px;
+  font-size: 22px;
   font-weight: 400;
   font-family: "L890-Roman-Regular";
   color: #ffffff;
   line-height: 1.2;
   text-align: center;
+
+  @media (min-width: 600px) {
+    font-size: 26px;
+  }
 
   @media (min-width: 1170px) {
     text-align: left;
@@ -77,7 +85,7 @@
     background: linear-gradient(
       0deg,
       rgba(255, 255, 255, 0) 30%,
-      rgba(253, 109, 253, 1) 100%
+      $redCyber 100%
     );
   }
 
@@ -107,20 +115,30 @@
 
 .footer-inner__title {
   margin-bottom: 40px;
-  font-size: 34px;
+  font-size: 26px;
   font-weight: 700;
   font-family: "L890-Roman-Bold";
   color: rgb(255, 255, 255);
   font-weight: bold;
+
+  @media (min-width: 600px) {
+    font-size: 34px;
+  }
 }
 
 .footer-inner__subtitle {
   margin: 0;
   margin-bottom: 40px;
-  font-size: 30px;
+  font-size: 24px;
   font-weight: 300;
   font-family: "L850-Slab-Light";
   color: rgb(255, 255, 255);
+  text-align: center;
+  line-height: 1.5;
+
+  @media (min-width: 600px) {
+    font-size: 30px;
+  }
 
   a {
     color: #73ebeb;
