--- a/src/scss/blocks/portfolio-inner.scss
+++ b/src/scss/blocks/portfolio-inner.scss
@@ -49,7 +49,7 @@
 
   &:hover {
     color: #73ebeb;
-    border-bottom-color: #fd6dfd;
+    border-bottom-color: $redCyber;
   }
 
   @media (min-width: 1170px) {
@@ -91,7 +91,7 @@
 .checkbox-pug:checked + label,
 .checkbox-js:checked + label {
   color: #73ebeb;
-  border-bottom-color: #fd6dfd;
+  border-bottom-color: $redCyber;
 }
 
 .seperator {
@@ -139,8 +139,8 @@
   visibility: visible;
   transform: scale(1);
   transition: all 1.5s linear;
-  width: 560px;
-  height: 488px;
+  width: 100%;
+  height: auto;
   animation: cards-anim 1.5s ease-in-out forwards;
 
   @media (min-width: 1020px) {
