--- a/src/scss/blocks/sidebar.scss
+++ b/src/scss/blocks/sidebar.scss
@@ -80,7 +80,7 @@
   display: flex;
   padding: 10px;
   width: 100%;
-  background: #ff52cb;
+  background: $redCyber50;
   text-decoration: none;
 
   font-size: 26px;
@@ -103,6 +103,7 @@
 .sidebar__social .fa {
   font-size: 48px;
   color: #fff;
+  text-shadow: 0px 0px 10px #e70f0f, 0px 0px 20px #e70f0f, 0px 0px 30px #e70f0f;
 }
 
 .sidebar__btn {
