--- a/src/scss/blocks/timeline.scss
+++ b/src/scss/blocks/timeline.scss
@@ -13,7 +13,7 @@
     background: linear-gradient(
       0deg,
       rgba(255, 255, 255, 0) 30%,
-      rgba(253, 109, 253, 1) 100%
+      $redCyber 100%
     );
   }
 
@@ -27,7 +27,7 @@
     background: linear-gradient(
       180deg,
       rgba(255, 255, 255, 0) 30%,
-      rgba(253, 109, 253, 1) 100%
+      $redCyber 100%
     );
   }
 }
@@ -50,7 +50,7 @@
     position: absolute;
     content: "";
     clear: both;
-    background-color: #fd6dfd;
+    background-color: $redCyber;
     width: 100%;
     height: 10px;
     bottom: -7px;
