--- a/src/scss/blocks/ui.scss
+++ b/src/scss/blocks/ui.scss
@@ -3,9 +3,9 @@
   position: relative;
   display: inline-block;
   padding: 20px 40px;
-  background-color: #fd6dfd80;
+  background-color: $redCyber50;
   border-radius: 40px;
-  border: 4px solid #fd6dfd;
+  border: 4px solid $redCyber;
   font-size: 24px;
   font-family: "Neoneon";
   color: #73ebeb;
@@ -17,8 +17,8 @@
 
   &:hover {
     transition-delay: 1.5s;
-    box-shadow: 0 0 10px #fc93fc, 0 0 20px #fc93fc, 0 0 40px #fc93fc,
-      0 0 80px #fc93fc, 0 0 160px #fc93fc;
+    box-shadow: 0 0 10px $redCyber50, 0 0 20px $redCyber50, 0 0 40px $redCyber50,
+      0 0 80px $redCyber50, 0 0 160px $redCyber50;
   }
 
   span {
@@ -34,8 +34,8 @@
     height: 4px;
     width: 20px;
     border-radius: 40px;
-    background: #fd6dfd;
-    box-shadow: 8px -8px 0px #fd6dfd, 8px 8px 0px #fd6dfd;
+    background: $redCyber;
+    box-shadow: 8px -8px 0px $redCyber, 8px 8px 0px $redCyber;
     z-index: -1;
     transition: width 0.5s, left 0.5s, height 0.5s, box-shadow 0.5s;
     transition-delay: 1s, 0.5s, 0s, 0s;
@@ -45,7 +45,7 @@
     width: 60%;
     height: 100%;
     left: -4px;
-    box-shadow: 100% 0 0 #fd6dfd, 100% 0 0 #fd6dfd;
+    box-shadow: 100% 0 0 $redCyber, 100% 0 0 $redCyber;
     transition-delay: 0s, 0.5s, 1s, 1s;
   }
 
@@ -58,8 +58,8 @@
     height: 4px;
     width: 20px;
     border-radius: 40px;
-    background: #fd6dfd;
-    box-shadow: -8px -8px 0px #fd6dfd, -8px 8px 0px #fd6dfd;
+    background: $redCyber;
+    box-shadow: -8px -8px 0px $redCyber, -8px 8px 0px $redCyber;
     z-index: -1;
     transition: width 0.5s, right 0.5s, height 0.5s, box-shadow 0.5s;
     transition-delay: 1s, 0.5s, 0s, 0s;
@@ -69,7 +69,7 @@
     width: 60%;
     height: 100%;
     right: -4px;
-    box-shadow: 100% 0 0 #fd6dfd, 100% 0 0 #fd6dfd;
+    box-shadow: 100% 0 0 $redCyber, 100% 0 0 $redCyber;
     transition-delay: 0s, 0.5s, 1s, 1s;
   }
 
@@ -87,24 +87,24 @@
 }
 
 .card {
-  width: 560px;
+  width: 100%;
+  max-width: 480px;
   position: relative;
   display: inline-block;
   text-decoration: none;
   box-shadow: 10px 14px 16px -3px rgba(34, 60, 80, 0.3);
   border-radius: 20px;
-  border: 6px solid #fd6dfd;
+  border: 6px solid $redCyber;
   transition: 0.3s linear, border 0.5s ease-in-out, transform 1.2s linear;
   background-color: rgba(0, 0, 0, 0.5);
   z-index: 30;
-  overflow: hidden;
 
   &:hover {
     transform: scale(1.1);
 
     .card__title {
       transition: 1s linear;
-      color: #fd6dfd;
+      color: $redCyber;
       text-decoration: underline;
       text-shadow: 1px 1px 2px black, 0 0 1em black;
     }
@@ -194,7 +194,7 @@
 .card__text {
   padding-top: 20px;
   text-align: center;
-  border-top: 6px solid #fd6dfd;
+  border-top: 6px solid $redCyber;
 }
 
 .card__btn {
@@ -208,7 +208,7 @@
   font-family: "Neoneon";
   color: aqua;
   padding: 20px 40px;
-  background: #fd6dfd;
+  background: $redCyber;
   cursor: pointer;
   z-index: 25;
   -webkit-box-reflect: below 10px
@@ -369,11 +369,11 @@
   animation: bg 30s linear 0s infinite alternate;
   background: linear-gradient(
       160deg,
-      rgba(203, 251, 255, 0.5) 40%,
+      rgba(203, 251, 255, 0.5) 50%,
       #fd6dfc80 80%
     ),
     url("../img/body/00.webp") top left / cover no-repeat;
-  background-blend-mode: hue;
+  background-blend-mode: darken;
   overflow: hidden;
   z-index: 20;
 }
@@ -453,7 +453,7 @@
   }
 
   a:hover {
-    color: #fd6dfd;
+    color: $redCyber;
   }
 
   &::before {
@@ -476,7 +476,7 @@
     content: "";
     height: 0;
     width: 40px;
-    border-bottom: 40px solid #fd6dfd;
+    border-bottom: 40px solid $redCyber;
     border-left: 20px solid transparent;
     border-right: 20px solid transparent;
     transform: rotate(90deg) translate(-7px, -3px);
