--- a/src/scss/mixin/about-project.scss
+++ b/src/scss/mixin/about-project.scss
@@ -10,7 +10,7 @@
   color: rgb(255, 255, 255);
   font-weight: bold;
   line-height: 1.2;
-  border-bottom: 8px solid #fd6dfd;
+  border-bottom: 8px solid $redCyber;
 
   @media (min-width: 600px) {
     font-size: 44px;
