--- a/src/scss/mixin/link-project.scss
+++ b/src/scss/mixin/link-project.scss
@@ -10,7 +10,7 @@
   font-family: "L890-Roman-Bold";
   color: rgb(255, 255, 255);
   line-height: 1.2;
-  border-bottom: 8px solid #fd6dfd;
+  border-bottom: 8px solid $redCyber;
 
   @media (min-width: 600px) {
     font-size: 44px;
@@ -32,18 +32,18 @@
   }
 
   i {
-    color: #fd6dfd;
+    color: $yellowcolor;
     margin-right: 15px;
     transition: all 0.4s linear;
   }
 
   &:hover a {
-    color: #ea736d;
+    color: $blueCyber;
   }
 
   &:hover i {
     transition: 0.5s ease-in-out;
-    color: #ea736d;
+    color: $blueCyber;
   }
 }
 
@@ -51,7 +51,7 @@
   font-size: 24px;
   font-weight: 400;
   font-family: "L890-Roman-Regular";
-  color: #fd6dfd;
+  color: $yellowcolor;
   text-decoration: underline;
   line-height: 1.2;
   transition: 0.3s ease-in-out;
