--- a/src/scss/vars/_variables.scss
+++ b/src/scss/vars/_variables.scss
@@ -6,3 +6,7 @@ $lightGrayBg: #f5f5f5;
 $grayBg: #808080;
 $redcolor: #e74c3c;
 $yellowcolor: #fbdc4d;
+$redCyber: #ec0b36;
+$redCyber50: #ec0b3485;
+$blueCyber: #00ffff;
+$pincCyber: #fd6dfd;
